pkg/tests/ossm-federation/testdata/failover/east-mesh/destinationrule-failover.yaml
# Copyright 2024 Red Hat, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#	http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: failover
  namespace: bookinfo-ha
spec:
  host: ratings.bookinfo-ha.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
      localityLbSetting:
        enabled: true
        failover:
          - from: {{ .EastMeshRegion }}
            to: {{ .WestMeshRegion }}
    outlierDetection:
      consecutive5xxErrors: 2
      interval: 10s
      baseEjectionTime: 1m
