pkg/tests/ossm-federation/testdata/failover/east-mesh/importedserviceset.yaml
apiVersion: federation.maistra.io/v1
kind: ImportedServiceSet
metadata:
  name: west-mesh
  namespace: east-mesh-system
spec:
  locality:
    region: {{ .Region }}
    zone: {{ .Zone }}
  importRules:
    - type: NameSelector
      # Set to true to aggregate remote endpoint with local services.
      # When true, services will be imported as <name>.bookinfo-ha.svc.cluster.local
      # When false, services will be imported as <name>.bookinfo-ha.svc.west-mesh-imports.local
      importAsLocal: true
      nameSelector:
        namespace: bookinfo
        alias:
          namespace: bookinfo-ha
          name: ratings
