pkg/tests/ossm-federation/testdata/failover/east-mesh/mongodb-remote-virtualservice.yaml
# Copyright 2024 Red Hat, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#	http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# VirtualService resource that redirects the local service to the remote
# services.  This only works with passthrough.

kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: mongodb-remote
  namespace: bookinfo-ha
spec:
  hosts:
    - mongodb.bookinfo-ha.svc.cluster.local
  tcp:
    - route:
        - destination:
            host: mongodb.bookinfo-ha.svc.cluster.local
